got rid of websocket functionality

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		</header>
 
 		<main>
-			<div class="user-count" id="user-count">
+			<!-- <div class="user-count" id="user-count">
 				<h3 id="user-count-text"></h3>
-			</div>
+			</div> -->
 
 			<div class="landing-intro">
 				<p>Share your favorite family recipes with other home cooks.</p>
