--- a/profile.html
+++ b/profile.html
@@ -168,7 +168,7 @@
 		</main>
 
 		<footer>
-			<a href="https://simon.benjaminpeek.com" target="_blank">Simon</a>
+			<!-- <a href="https://simon.benjaminpeek.com" target="_blank">Simon</a> -->
 			<a href="https://github.com/benjaminpeek/startup" target="_blank">Author's GitHub</a>
 		</footer>
 
